  - various frequently used objects are cached in UserFacade, especially
    those used for authz and tarpit, making many things faster and cached
    queries around 4 times faster than the already optimized speed
  - many small performance improvements, changes to get around Groovy and
    Java quirks
- Change components to load in reverse of order initialized (later
  components override earlier ones); ECFI:415
- User Facade
  - Added support for login via HTTP Basic Authorization, mostly for
    things like RESTful services and support for clients using it
- Entity Facade
  - Allow (optional) reference of entity by package-name + entity-name,
  - Change framework to reference all its entities by fully qualified name
  - Allow separator (hash) between title and related-entity-name in
    relationship name now that related-entity-name may be packages and
    such, and looks funny
  - Primary sequenced ID banking for better performance when creating
    records with sequenced single field primary key (default bank size 50)
  - Change lastUpdatedStamp to tx timestamp to sync/export/etc data without
    splitting transactions
  - Supports seed-data element in entity and extend-entity elements so
    that seed data can be defined and managed along with entity definitions
- Screen Facade
  - List multi form submit button below and not in own column
  - Allow field, auto-fields-entity, and auto-fields-service to appear in
    any order and preserve that order when exploding the form definition
  - Auto Screen move Edit button on list forms to left side
- Added support for other types of wiki files including MediaWiki, Textile,
  TracWiki, and TWiki (in addition to Confluence)

===========================================================================
Release 1.0-rc1 - 3 August 2011
===========================================================================

The first 1.0 release candidate of the Moqui Framework (version 1.0-rc1)
was released on 3 August 2011.
