@@ -19,7 +19,7 @@ This release includes:
   - many small performance improvements, changes to get around Groovy and
     Java quirks
 - Change components to load in reverse of order initialized (later
-  components override earlier ones); ECFI:415
+  components override earlier ones)
 - User Facade
   - Added support for login via HTTP Basic Authorization, mostly for
     things like RESTful services and support for clients using it
@@ -35,6 +35,7 @@ This release includes:
     splitting transactions
   - Supports seed-data element in entity and extend-entity elements so
     that seed data can be defined and managed along with entity definitions
+  - Option to disable Entity ECAs during data load
 - Screen Facade
   - List multi form submit button below and not in own column
   - Allow field, auto-fields-entity, and auto-fields-service to appear in
@@ -503,6 +504,11 @@ This release includes:
 Tools probable for 1.0 final:
 ===========================================================================
 
+- Isolate cache clearing failures, don't kill calling method
+- In primary sequence for entity names if the value exists in the db reset
+  sequence and try again (or perhaps suffix, also testing and incrementing
+  the suffix as needed); worth the performance impact of one query per
+  sequence?
 - Screen Facade
   - Filter menu rendering by authorization
 
